[project]
name = "major-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Sooraj, Divya"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=1.26.0,<2.2.0)",
    "tensorflow[and-cuda] (>=2.17.0,<2.18.0)",
    "scikit-learn (>=1.0.0,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "accelerate (>=1.4.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
